--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+<h1>Deniz Kaplaner</h1>
+<h2>Hakkımda</h2>
+<p> Merhaba ben Deniz 19 yaşındayım ilgi alanım oyunlar ve genel olarakta fps oyunları oynamayı çok severim.</p>
+<h2>İlgi Alanlarım</h2>
 
+<ol>
+    <li> FPS
+        <ul><a href="https://playvalorant.com/en-gb/" target="_blank" >Valorant</a></ul>
+        <ul><a href="https://www.counter-strike.net/news" target="_blank" ><strong>CSGO</strong></a></ul>
+        <ul><a href="https://www.zulaoyun.com" target="_blank" ><em>Zula</em></a></ul>
+        <br>
+    </li>
+    <li> MMORPG
+        <ul>Black Desert Online</ul>
+        <ul> <strong>Destiny 2</strong></ul>
+        <ul>The Elder Scrolls Online</ul>
+        <br>
+    </li>
+    <li> BATTLE ROYALE
+        <ul>Call of Duty: Warzone</ul>
+        <ul> <strong>Fortnite Battle Royale</strong></ul>
+        <ul>Apex Legends</ul>
+        <br>
+    </li>
+</ol>
+<hr>
+<h2>En Sevdiğim Oyun</h2>
+<h4>VALORANT 2021 YAPIMI FPS OYUNU</h4>
+<img src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt232a8ff06bf93ebd/63eeb1546495981254659630/Valorant_2022_EP6-1_PlayVALORANT_ContentStackThumbnail_1200x625_MB01.png" alt="VALORANT JPG">
+<p>Oynanış Valorant, yakın gelecekte geçen takım tabanlı bir taktik nişancı ve birinci şahıs nişancı oyunudur.</p>
+
+
+
+
+
+</body>
+</html>
